Cleaned up builder Cleaned up the ang builder

--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/devmachinist/bamluv-us-en#readme",
   "bin": {
-    "user": "bin/user.js",
-    "init": "bin/init.js",
-    "add": "bin/add.js",
-    "build": "bin/build.js",
-    "serve": "bin/serve.js",
-    "run": "bin/serve.js",
-    "start": "bin/serve.js",
-    "edit": "bin/edit.js",
-    "theme": "bin/theme.js",
-    "nav": "bin/nav.js",
-    "body": "bin/body.js",
-    "footer": "bin/footer.js",
-    "admanager": "bin/admanager.js",
-    "subscription": "bin/subscription.js",
-    "config": "bin/config.js",
-    "rodeo": "bin/rodeo.js"
+    "bamluv user": "bin/user.js",
+    "bamluv init": "bin/init.js",
+    "bam add": "bin/add.js",
+    "bam build": "bin/build.js",
+    "bam serve": "bin/serve.js",
+    "bam run": "bin/serve.js",
+    "bam start": "bin/serve.js",
+    "bam ui": "bin/edit.js",
+    "bam theme": "bin/theme.js",
+    "bam nav": "bin/nav.js",
+    "bam body": "bin/body.js",
+    "bam footer": "bin/footer.js",
+    "bam admanager": "bin/admanager.js",
+    "luv subscription": "bin/subscription.js",
+    "luv config": "bin/config.js",
+    "bam rodeo": "bin/rodeo.js"
   },
   "dependencies": {
     "esm": "^3.2.25",
